css/danilo.css
body {
    margin: 0;
    padding: 0;
    background: #f5f5f5;
    font-family: 'Arimo', sans-serif;
}

a {
    color: #1E77E2;
    text-decoration: none;;
}

a:hover {
    text-decoration: underline;
    opacity: 0.7;
}

.content {
    position: relative;
    margin: 40px auto;
    padding: 2em;
    width: 700px;
    background: #fff;
    border-radius: 2px;
}

.content::before,
.content::after {
    content: '';
    position: absolute;
    bottom: 10px;
    width: 40%;
    height: 10px;
    box-shadow: 0 5px 14px rgba(0, 0, 0, .4);
    z-index: -1;
    transition: all .3s ease-in-out;
}

.content::before {
    left: 15px;
    transform: skew(-5deg) rotate(-5deg);
}

.content::after {
    right: 15px;
    transform: skew(5deg) rotate(5deg);
}

#header h1 {
    font-size: 45px;
    font-family: 'Merriweather', serif;
    color: #1E77E2;
    margin-top: 0;
    margin-bottom: 16px;
}

#header ul {
    list-style-type: none;
    padding: 0;
}

#header ul li {
    display: inline-block;
    font-size: 13px;
    padding-right: 2em;
    color: 0D0D0D;
    font-family: 'Inconsolata', monospace;
}

.header-hamburger {
    display: none;
    position: absolute;
    top: 0;
    right: 0;
    padding: 0.5em;
    color: #1E77E2;
    font-size: 32px;
}

.header-hamburger:hover {
    text-decoration: none;
}

h2 {
    font-size: 19px;
    font-family: 'Merriweather', serif;
    font-weight: 400;
    color: #1E77E2;
    margin-bottom: 8px;
}

#skills p {
    font-size: 13.5px;
    margin: 0;
    padding-left: 2em;
}

#skills .skills-title {
    font-weight: 700;
    font-size: 15px;
    margin-top: 8px;
    padding-left: 1em;
}

.experience-box {
    display: none;
}

.experience-container {
    display: flex;
}

.experience-active {
    display: inline-block !important;
}

.experience-select {
    list-style-type: none;
    padding: 0;
    margin-right: 2em;
    display: inline-block;
    flex-basis: 20%;
}

.experience-description {
    flex-basis: 80%;
}

.experience-description h3 {
    font-size: 16px;
    font-weight: 700;
    display: inline-block;
    margin-bottom: 0;
}

.experience-description h3 .experience-name {
    color: #606A86;
    font-size: 16px;
    font-weight: 700;
}

.experience-description .experience-date {
    padding: 0;
    display: inline-block;
    font-family: 'Courier Prime', monospace;
    font-size: 12px;
    color: #606A86;
    padding-left: 8em;
    font-style: italic;
}

.experience-description .experience-info {
    margin-top: 0;
    padding: 0;
    font-size: 15px;
}

.experience-select li {
    padding: 1em 2em;
    border-left: 4px rgb(211, 211, 211) solid;
}

.experience-select .exerience-label-active {
    border-left: 4px #1E77E2 solid;
    opacity: 0.8;
}

.experience-select .exerience-label-active a {
    opacity: 1;
}

.experience-select li {
    opacity: 0.5;
}

.experience-select li a:hover {
    text-decoration: none;
    opacity: 1;
}

.experience-select li:hover {
    background-color: rgba(30, 118, 226, 0.048);
    cursor: pointer;
    opacity: 1;
}

#experience {
    margin-bottom: 2em;
}

.project-table {
    width: 100%;
}

.project-table-element {
    padding-bottom: 1em;
    padding-right: 1em;
    width: 50%;
}

.project {
    border-left: 4px rgba(30, 118, 226, 0.048) solid;
    padding: 1em;
    font-size: 13px;
}

.project .project-name {
    font-size: 16px;
}

.project .project-name, .project .project-description {
    display: block;
    padding-bottom: 1em;
}

.project .lang-js {
    color: #f0c710;
}

.project .lang-py {
    color: #3572A5;
}

#education h3 {
    color: #000000;
    font-size: 16px;
    font-weight: 700;
}

#education .edu-date {
    padding-top: 0;
    margin-top: 0;
    font-family: 'Courier Prime', monospace;
    font-size: 12px;
    color: #606A86;
    font-style: italic;
}

#education ul {
    list-style-type: none;
}

#education ul li {
    font-size: 15px;
}

#education {
    margin-bottom: 2em;
}

/* Mobile */

@media only screen and (max-width: 768px) {

    .content {
        width: 400px !important;
    }

    .header-links {
        display: none;
        margin-bottom: 2em;
    }

    .header-links li {
        display: block !important;
        text-align: right;
        padding-bottom: 1em;
    }

    .header-hamburger {
        position: fixed;
        z-index: 999;
        top: 0;
        right: 0;
        display: block;
    }

    .header-hamburger:hover {
        cursor: pointer;
    }

    .education .edu-date {
        display: block !important;
    }

    body {
        -moz-transform: scale(0.8, 0.8);
        zoom: 0.8;
        zoom: 80%;
    }
}

